# BitWispr

./: .gitignore  README.md  api_client.py  bitwispr_runtime.py  discord_responder.py  main.py  pyproject.toml  server.py
bitwispr/: __init__.py  app.py  audio.py  config.py  discord.py  linux_platform.py  llm_controller.py  logging_utils.py  platform.py
scripts/: install_autostart.sh  run_client.sh  run_server.sh  uninstall_autostart.sh
