[project]
name = "bitwispr"
version = "0.1.0"
description = "Local dictation and read-aloud desktop daemon built on Trillim Whisper and TTS"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "trillim[voice]>=0.6.0",
    "sounddevice",
    "numpy",
    "pynput",
    "evdev",
]

[project.scripts]
bitwispr = "bitwispr.app:main"
