[project]
name = "bitwispr"
version = "0.1.0"
description = "Local dictation, discord spammer and read-aloud desktop daemon built on Trillim"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "trillim[voice]>=0.7.2",
    "sounddevice",
    "numpy",
    "pynput",
    "evdev",
]

[project.scripts]
bitwispr = "bitwispr.app:main"
